Refactor BlockListener for clarity and efficiency
Reordered imports for better organization and replaced list indexing with getFirst() for metadata retrieval. Introduced local variable for McMMOPlayer to avoid redundant lookups and improved code readability by using final variables where appropriate.